v11 2023-05-02

        * A strong type can now be used as an NTTP (Non Type Template Parameter)

            using type = strong::type<int, struct int_>;

            template <type t>
            struct S {
                constexpr operator int() const { return value_of(t);}
            };

            int main()
            {
                S<type{3}> obj;
                return obj;
            }

          Thank you Toni Neubert for the implementation.

v10 2023-02-03

        * Corrected the test for, and use of, concepts when specializing
          std::numeric_limits<> for strong::arithmetic types. Thank you
          Björn Schäpers for reporting.

v9 2023-01-23

        * Lowered the minimum required CMake version to 3.7, unless unit-tests
          are built.

        * A type predicate strong::type_is_v<type, modifier> has been introduced.
          It can be used in compile time tests for generic code to ensure that
          a strong type has the necessary modifiers. Example:

          using type = strong::type<int, struct type_,
                                    strong::ordered,
                                    strong::ordered_with<int, long>>;
          static_assert(strong::type_is_v<type, strong::ordered>);
          static_assert(strong::type_is_v<type, strong::ordered_with<long>>);

          Note that for variadic modifiers like strong::ordered_with<>, the
          predicate ensures that all types listed in the test are supported,
          so in the example above, the test type_is_v<type, ordered_with<long>>
          is true because 'long' is included in the type definition using
          ordered_with<int, long>.

          There's also a type version, to use as
          strong::is_type<type, modifier>::value;

        * std::numeric_limits<T> is specialized for types using the
          strong::arithmetic modifier.

        * Added missing const&& overloads for value_of()

v8 2023-01-04
