@@ -38,5 +38,6 @@
 #include "implicitly_convertible_to.hpp"
 #include "formattable.hpp"
 #include "scalable_with.hpp"
+#include "three_way.hpp"
 
 #endif //ROLLBEAR_STRONG_TYPE_HPP_INCLUDED
